# GoogleVoice-Scribe

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
extension/: background.js  manifest.json  offscreen.html  offscreen.js
extension/content/: google_voice.js
extension/ui/: permission.html  permission.js
scripts/: backfill-conversations.ps1  backfill_conversations.py  benchmark-cpu-gpu.ps1  benchmark-pipeline.py  benchmark_cpu_gpu.py  build-extension.ps1  build-installer.ps1  build-server-exe.ps1  build_extension.py  build_installer.py  ci_validate.py  compress-recordings.ps1  compress_recordings.py  install-service-deps.ps1  install_service_deps.py  release.ps1  release.py  script_common.py  start-service.ps1  start_service.py  test-title-generation.py  test_title_generation.py
service/: control_app.py  install_common.py  installer.py  launcher.py  requirements.txt
service/app/: __init__.py  audio.py  backfill.py  cli.py  compress_recordings.py  config.py  conversation.py  main.py  sessions.py  transcriber.py  version.py
tests/: conftest.py  test_config.py  test_conversation.py  test_docs.py  test_extension_manifest.py  test_install_common.py  test_script_common.py  test_sessions.py
